[gd_scene load_steps=9 format=1]

[ext_resource path="res://game/game.gd" type="Script" id=1]
[ext_resource path="res://game/letter_grid.gd" type="Script" id=2]
[ext_resource path="res://objects/letter.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/drag_panel.gd" type="Script" id=4]
[ext_resource path="res://game/scores.gd" type="Script" id=5]
[ext_resource path="res://game/score_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://game/word_list_font.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.226562, 0.226562, 0.226562, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="camera" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="letter_grid" type="Node2D" parent="."]

script/script = ExtResource( 2 )
letter_scene = ExtResource( 3 )
width = 10
height = 10
special_chance = 0.01
letter_spacing = Vector2( 60, 60 )
click_radius_multiplier = 0.8

[node name="gui_layer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="gui" type="HBoxContainer" parent="gui_layer"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="left" type="Control" parent="gui_layer/gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 208.0
margin/bottom = 600.0

[node name="drag_panel" type="Panel" parent="gui_layer/gui"]

visibility/opacity = 0.0
rect/min_size = Vector2( 600, 600 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 212.0
margin/top = 0.0
margin/right = 812.0
margin/bottom = 600.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 4 )
letter_grid_path = NodePath("../../../letter_grid")
min_drag_distance = 5

[node name="scores" type="VBoxContainer" parent="gui_layer/gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 816.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
custom_constants/separation = 5
alignment = 0
script/script = ExtResource( 5 )
game_path = NodePath("../../..")
max_word_list_entries = 10

[node name="score" type="Label" parent="gui_layer/gui/scores"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 208.0
margin/bottom = 30.0
custom_fonts/font = ExtResource( 6 )
text = "000000 pts"
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="past_scores" type="Label" parent="gui_layer/gui/scores"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 35.0
margin/right = 208.0
margin/bottom = 600.0
custom_fonts/font = ExtResource( 7 )
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


